Fix dark mode img & update css

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,24 +5,24 @@
 
 :root {
     color-scheme: light;
-    --content-color: rgba(0,0,0,0.8);
+    --content-color: rgba(0,0,0,0.9);
     --sub-content-color:rgba(0,0,0,0.5);
     --background-color: rgb(255,255,255);
     --sub-background-color: rgcab(245,245,245);
     --brand-color: #38800a;
-    --link-color: #576b95;
+    --link-color: rgb(87, 107, 149);
     --invert-when-dark-filter: none;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --content-color: rgba(255,255,255,0.8);
+        --content-color: rgba(255,255,255,0.6);
         --sub-content-color: rgba(255,255,255,0.5);
-        --background-color: rgb(35,35,35);
+        --background-color: rgb(25,25,25);
         --sub-background-color: rgb(45,45,45);
-        --brand-color: rgb(81,196,113);
-        --link-color: #7d90a9;
-        --invert-when-dark-filter: invert(86.1%) hue-rotate(180deg);
+        --brand-color: rgb(131,192,120);
+        --link-color: rgb(125, 144, 169);
+        --invert-when-dark-filter: invert(90%) hue-rotate(180deg);
     }
 }
 
@@ -41,6 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 .content {
     color: var(--content-color);
     font-size: 17px;
+    letter-spacing: 0.544px; //0.034*16
     text-align: left;
 }
 
@@ -66,7 +67,7 @@ code, pre {
     border: none;
 }
 
-img {
+img.invert-when-dark {
     filter: var(--invert-when-dark-filter);
 }
 
@@ -77,7 +78,7 @@ img {
 .index ol {
     font-size: 17px;
     list-style-type: cjk-ideographic;
-    padding-left: 3em;
+    padding-left: 4em;
 }
 
 .index div {
